add sales data changelog some refactoring